fix: align auth me response with user schema